add preview response

--- a/panel.html
+++ b/panel.html
@@ -263,6 +263,7 @@
                         <button class="view-tab" data-view="raw" data-pane="response">Raw</button>
                         <button class="view-tab" data-view="hex" data-pane="response">Hex</button>
                         <button class="view-tab" data-view="json" data-pane="response">Json</button>
+                        <button class="view-tab" data-view="preview" data-pane="response">Preview</button>
                     </div>
                     <div class="pane-body">
                         <div class="editor-container">
@@ -281,6 +282,16 @@
                                     <span class="json-warning-text">Not a valid JSON - showing raw body</span>
                                 </div>
                                 <pre id="res-json-display" class="json-display"></pre>
+                            </div>
+                            <div id="res-view-preview" class="view-content" style="display: none;">
+                                <div class="preview-controls" style="padding: 8px; border-bottom: 1px solid var(--border-color); display: flex; align-items: center; gap: 8px;">
+                                    <label style="display: flex; align-items: center; gap: 4px; font-size: 12px;">
+                                        <input type="checkbox" id="preview-allow-scripts" style="margin: 0;">
+                                        <span>Allow Scripts</span>
+                                    </label>
+                                    <span style="font-size: 11px; color: var(--text-secondary);">⚠️ Enabling scripts may pose security risks</span>
+                                </div>
+                                <iframe id="response-preview-iframe" sandbox="allow-forms allow-same-origin" style="width: 100%; height: 100%; border: none; background: white;"></iframe>
                             </div>
                         </div>
                         <div class="search-bar-container">
